@@ -20,12 +20,13 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 '''
 
+import json
 import logging
 import logging.handlers
-import atexit
-import json
 import os
-from datetime import datetime
+import schedule
+import time
+import re
 
 # 讀取設定檔
 # LOGFILE => Linebot Log Path
@@ -34,31 +35,6 @@ with open('setting.json', 'r') as f:
 
 LOGFILE = setting['LOGFILE']
 
-def add_time_to_logfile_name():
-    """
-    在檔名後加上當前時間，形成新的日誌檔案名稱
-    """
-    now = datetime.now()
-    logfilename = os.path.basename(LOGFILE)
-    dirname = os.path.dirname(LOGFILE)
-    new_logfilename = "{}_{}.log".format(
-        logfilename, now.strftime("%Y-%m-%d_%H-%M-%S"))
-    return os.path.join(dirname, new_logfilename)
-
-
-def rollover_logfile():
-    """
-    轉移現有的日誌檔案，以維持最多30個日誌檔案
-    """
-    loghandler.doRollover()
-    old_logs = loghandler.getFilesToDelete()
-    for log in old_logs:
-        try:
-            os.remove(log)
-        except Exception:
-            pass
-
-
 # 設定logger
 logger = logging.getLogger(__name__)
 logger.setLevel(logging.INFO)
@@ -66,13 +42,43 @@ logger.setLevel(logging.INFO)
 # 設定其格式
 log_formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')
 
-# 設定TimedRotatingFileHandler
-loghandler = logging.handlers.TimedRotatingFileHandler(filename=add_time_to_logfile_name(), when='midnight', interval=1, backupCount=30)
-loghandler.setFormatter(log_formatter)
-logger.addHandler(loghandler)
+# 設定FileHandler
+file_handler = logging.FileHandler(LOGFILE)
+file_handler.setFormatter(log_formatter)
+logger.addHandler(file_handler)
 
-# 設定日誌記錄器在關閉時不清除handler，以便在下一次啟動應用程序時繼續寫入到新文件。
-logger.propagate = False
+def close_logger():
+    logger.removeHandler(file_handler)
+    file_handler.close()
 
-# 設定當應用程式關閉時執行的函數
-atexit.register(rollover_logfile)
+    # 讀取LineBot.log內容，寫入當日的log檔案
+    with open(LOGFILE, 'r') as f:
+        log_lines = f.readlines()
+
+    current_date_str = None
+    current_log_file = None
+
+    for line in log_lines:
+        line = line.strip()
+        # 判斷開頭是否為「年-月-日」
+        date_match = re.match(r'^(\d{4})-(\d{2})-(\d{2})', line)
+        if date_match or not current_log_file:
+            year, month, day = date_match.groups()
+            current_date_str = year + month + day
+            current_log_file = f'LineBot_{current_date_str}.log'
+        
+        if os.path.exists(current_log_file):
+            with open(current_log_file, 'a', encoding='utf-8', newline='') as f:
+                f.write(line + '\n')
+        else:
+            with open(current_log_file, 'w', encoding='utf-8', newline='') as f:
+                f.write(line + '\n')
+
+    # 移除LineBot.log
+    open(LOGFILE, 'w').close()
+
+def Logger_schedule():
+    schedule.every().day.at("23:00").do(close_logger)
+    while True:
+        schedule.run_pending()
+        time.sleep(60)
