@@ -228,7 +228,7 @@ def user_query_website(user_text):
 # 初次執行更新黑名單
 update_blacklist()
 
-def run_schedule():
+def Update_url_schedule():
     # 定時排程，每一小時執行一次 update_blacklist()
     schedule.every(1).hours.do(update_blacklist)
     while True:
@@ -236,4 +236,4 @@ def run_schedule():
         time.sleep(60)
 
 if __name__ == '__main__':
-    run_schedule()
+    Update_url_schedule()
