@@ -1,5 +1,8 @@
 # 歷史更新 History Update
 
+* 20230505 Update
+  * 調整 LineBot Log規則
+
 * 20230504 Update
   * 加入 LineBot IP來源限制
   * 更新 165反詐騙公告網址(112/4/25-112/4/30民眾通報假投資(博弈)詐騙網站)
